# eln

./: .gitignore  MANIFEST.in  Pipfile  README.md  app.py  bitbucket-pipelines.yml  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml
eln/: app.py
eln/commands/: __init__.py  cli.py
eln/commands/_ipsum/: main.py
eln/commands/azuracast/: __init__.py  client.py  main.py
eln/commands/azuracast/templates/: __init__.py  notification.py  print_std.py  slack.py
eln/commands/convert/: main.py
eln/commands/digitalocean/: __init__.py  main.py
eln/commands/forecast/: __init__.py  main.py  providers.py
eln/commands/news/: __init__.py  client.py  main.py
eln/commands/news/templates/: __init__.py  articles.py  sources.py
eln/commands/plot/: __init__.py  main.py
eln/commands/plot/readers/: __init__.py
eln/commands/stub/: __init__.py  main.py
eln/commands/stub/bottle/: __init__.py  main.py
eln/commands/stub/bottle/templates/: __init__.py  app.tpl  dbconfig.tpl  pipfile.tpl
eln/commands/stub/cpp/: __init__.py  main.py
eln/commands/stub/cpp/templates/: class.tpl  header.tpl  main.tpl  (+1 more)
eln/commands/stub/helpers/: __init__.py  creator.py
eln/commands/stub/package/: __init__.py  main.py
eln/commands/weather/: __init__.py  client.py  main.py  providers.py
eln/decorators/: __init__.py  register_reader.py  timed.py  weather_provider.py
eln/helpers/: __init__.py  logger.py  mode.py  parser.py  time.py
eln/templates/: __init__.py
tests/: test_azuracast.py  test_conversions.py  test_digitalocean.py  test_events.py  test_news.py  test_stub.py
(+6 files in other folders)
