[metadata]
name = eln
description = A command-line tool for quick math computations
license_file = LICENSE.txt
long-description = file: README.md
platforms = any

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    eln
    tests

[coverage:paths]
source =
    eln
